--- a/CS180_project0/index.html
+++ b/CS180_project0/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>berkeley-pixel-playground</title>
+    <title>I-want-to-do-CV-this-semester</title>
     <meta name="description" content="" />
     <meta name="author" content="Maximilian Christof" />
 
-    <meta property="og:title" content="berkeley-pixel-playground" />
+    <meta property="og:title" content="I-want-to-do-CV-this-semester" />
     <meta property="og:description" content="Maximilian Christof - CS180 Project 0" />
     <meta property="og:type" content="website" />
 
+    <link rel="icon" type="image/svg+xml" href="/placeholder.svg?v=2" />
+    <link rel="apple-touch-icon" href="/placeholder.svg?v=2" />
+    <link rel="shortcut icon" href="/placeholder.svg?v=2" />
+
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
