--- a/CS180_project0/index.html
+++ b/CS180_project0/index.html
@@ -15,6 +15,30 @@
     <link rel="apple-touch-icon" href="/placeholder.svg?v=2" />
     <link rel="shortcut icon" href="/placeholder.svg?v=2" />
 
+    <style>
+      @media print {
+        body {
+          -webkit-print-color-adjust: exact;
+          print-color-adjust: exact;
+        }
+        .no-print {
+          display: none !important;
+        }
+        .print-break {
+          page-break-before: always;
+        }
+        /* Ensure images don't break across pages */
+        img {
+          max-width: 100% !important;
+          height: auto !important;
+          page-break-inside: avoid;
+        }
+        /* Make text more readable in print */
+        .text-justify {
+          text-align: left;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
