fis non showing images

--- a/CS180_project0/index.html
+++ b/CS180_project0/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I-want-to-do-CV-this-semester</title>
+    <title>MC_CV_Projects</title>
     <meta name="description" content="" />
     <meta name="author" content="Maximilian Christof" />
 
-    <meta property="og:title" content="I-want-to-do-CV-this-semester" />
+    <meta property="og:title" content="MC_CV_Projects" />
     <meta property="og:description" content="Maximilian Christof - CS180 Project 0" />
     <meta property="og:type" content="website" />
 
